--- a/Verkefni1-2_sida3.html
+++ b/Verkefni1-2_sida3.html
@@ -33,7 +33,7 @@
         <div class="pure-menu pure-menu-open ">
         <a class="pure-menu-heading" href="#">Verkefni 3</a>
             <ul>
-            <li><a href="Verkefni1-2_sida1.html" class="alfa">Forsíða</a></li>
+            <li><a href="index.html" class="alfa">Forsíða</a></li>
             <li><a href="Verkefni1-2_sida2.html" >Tafla</a></li>
             <li><a href="Verkefni1-2_sida3.html" >Form</a></li>
             <li><a href="Verkefni1-2_sida4.html" >Hnappar</a></li>
